Added RSVP support

--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
 				<li class="day">Saturday, 14 October: Welcome&nbsp;Party!</li>
 				<li>Join us if you're already in town:</li>
 				<li>
-					<span class="time">4:00</span>
+					<span class="time">5:00 - 7:00</span>
 					<span class="fill"></span>
-					<span class="event">Pizza & Drinks, location TBA</span>
+					<span class="event">Drinks & Snacks at Hilton Bar</span>
 				</li>
 				<li class="day">Sunday, 15 October: Wedding&nbsp;Day!</li>
 				<li>
@@ -115,11 +115,11 @@
 			<div class="event-notes">
 				<p>Ceremony and Reception at <a href="https://www.google.com/maps/place/John+James+Audubon+Center+at+Mill+Grove/@40.1235055,-75.440779,17z/data=!3m1!4b1!4m5!3m4!1s0x89c691502b3bf879:0xfbbd3421caac8662!8m2!3d40.1235055!4d-75.4385903" class="event-link">John James Audubon Center at Mill Grove</a>.
 				</p>
-				<p>Accommodations are available at <a href="http://hiltongardeninn3.hilton.com/en/hotels/pennsylvania/hilton-garden-inn-valley-forge-oaks-PHLPOGI/index.html" class="event-link">Hilton Garden Inn in Valley Forge</a>.
+				<p>Accommodations are available at Hilton Garden Inn in Valley Forge.
 				</p>
 				<p><a href="https://secure3.hilton.com/en_US/gi/reservation/book.htm?inputModule=HOTEL&ctyhocn=PHLPOGI&spec_plan=MUW&arrival=20171014&departure=20171016&cid=OM,WW,HILTONLINK,EN,DirectLink&fromId=HILTONLINKDIRECT" class="event-link">Click here</a> to make reservations, using the group code MUW.
 				</p>
-				<p>Please carpool or taxi to the venue, or drink responsibly!
+				<p>Shuttle will be available to and from the Hilton starting at 3:50, running every 10 minutes. Arrive early to Audubon Center for refreshments.
 				</p>
 			</div>
 		</div>
@@ -132,7 +132,10 @@
 			<h3 class="section-heading">RSVP</h3>
 		</div>
 		<div id="rsvp-text">
-			<p>We'll have an online RSVP when invitations are sent, check back later!</p>
+
+			<iframe src="rsvp/rsvp-system.html" id="rsvp-iframe" name="rsvp-iframe" frameborder="0"></iframe>
+
+			<p>RSVP here! No later than September 15, please.</p>
 		</div>
 	</section>
 
